# qt_yarp

./: README.md
main/: CMakeLists.txt
main/conf/: CuddieExportBuildTree.cmake  CuddieExportForInstall.cmake  CuddieFindDependencies.cmake  CuddieHelpers.cmake  CuddieOptions.cmake  CuddiePackage.cmake  CuddieVersion.cmake
main/conf/template/: cuddie-config-build-tree.cmake.in  cuddie-config-install.cmake.in
main/core/: CMakeLists.txt
main/core/devices/: CMakeLists.txt
main/core/devices/actionManager/: ActionManager.thrift  CMakeLists.txt  actionManager.cpp  actionManager.h  actionManager.ini  actionRecorder.cpp  actionRecorder.h
main/core/devices/faceViewer/: CMakeLists.txt  faceViewer.cpp  faceViewer.h  faceViewer.ini  faceViewer.thrift
main/core/devices/faceViewer/common/: esUtil.c  esUtil.h
main/core/devices/herkulexMotor/: CMakeLists.txt  herkulexMotionControl.cpp  herkulexMotionControl.h  herkulexMotionControl.ini
main/core/devices/speech/: CMakeLists.txt  speech.cpp  speech.h  speech.thrift
main/core/robotInterface/: CMakeLists.txt
main/core/robotInterface/cmake/modules/: FindTinyXML.cmake
main/data/actions/: .test.log.swp
main/data/emotions/: README.txt
main/data/emotions/scripts/: convert2gif.sh  convert2small.sh
main/examples/motor-control/: CMakeLists.txt  main.cpp
main/libraries/: CMakeLists.txt
main/libraries/herkulex/: CMakeLists.txt
main/libraries/herkulex/include/: Herkulex.h  serial.h
main/libraries/herkulex/src/: Herkulex.cpp
main/manifests/robots/Cuddie01/: CMakeLists.txt  cuddie_all_withoutcamera.xml  cuddie_test.xml  robotInterface.ini
main/manifests/robots/Cuddie01/camera/: camera-opencv.xml  camera-test.xml
main/manifests/robots/Cuddie01/hardware/: herkulex-motor.xml
main/manifests/robots/Cuddie01/wrappers/: motor-wrapper.xml
main/tools/: CMakeLists.txt
main/tools/herkulexManager/: CMakeLists.txt  main.cpp
